# napari-gribberish

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: deploy.yml  test.yml  test_and_deploy.yml
src/napari_gribberish/: __init__.py  _reader.py  _sample_data.py  _widget.py  napari.yaml
tests/: conftest.py  test_reader.py  test_sample_data.py  test_widget.py
