[project]
name = "napari-gribberish"
dynamic = ["version"]
description = "Read GRIB (GRIB1/GRIB2) weather and ocean data into napari using gribberish"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  {name = "Ian Hunt-Isaak"},
  {email = "ian@earthmover.io"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.12"  # gribberish >=1.5 requires Python >=3.12
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "gribberish[xarray]>=1.5",
]

[project.optional-dependencies]
# Allow easily installation with the full, default napari installation
# (including Qt backend) using napari-gribberish[all].
all = ["napari[all]"]

[dependency-groups]
dev = [
    "tox-uv",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "prek",  # fast drop-in replacement for pre-commit
    "mypy",  # static type checking
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    # napari >=0.8 fixes a world-units crash when opening several GRIB files
    # with different dimensionality into one viewer. The rc specifier also
    # tells uv it may resolve the pre-release.
    "napari[qt]>=0.8.0rc1",
]

[project.entry-points."napari.manifest"]
napari-gribberish = "napari_gribberish:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/ianhi/napari-gribberish/issues"
"Documentation" = "https://github.com/ianhi/napari-gribberish#README.md"
"Source Code" = "https://github.com/ianhi/napari-gribberish"
"User Support" = "https://github.com/ianhi/napari-gribberish/issues"

[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_gribberish/_version.py"
fallback_version = "0.0.1+nogit"

[tool.mypy]
python_version = "3.12"
files = ["src"]
# Scientific deps (napari, xarray, magicgui, gribberish) ship partial or no
# stubs; don't fail on their missing type information.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
# filterwarnings = ["error"]  # recommended by PP309; deprecation warnings cause failures so leaving for the user to enable if desired
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
fix = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. handled by formatter
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]
